This is just to motivate myself to improve a little bit every day :)

Best: 32

29-04-2025
Streak: 1
    - Apply intermediate step in removing Voyager Navigation
        - Screens are still classes, instead of composable functions.
        - Need to figure out how to specify the task to display (when clicked from HomeScreen)
        with event/call-back, instead of passing the task to display directly.
        - But: As intermediate step, get the TaskScreen to display the correct task when clicked by using param.

08-04-2025
Streak: 2
    - Start refactoring and removing Voyager Navigation dependency

07-04-2025
Streak: 1
    - Following Tutorial: Make FAB visible when opening keyboard, prevent crash when adding task
    - Following Tutorial: Hook up empty Home Screen lambdas to Home View Model to underlying db Actions
    - Move Koin initialisation back out of general App code and into Android MainActivity.kt.
        Because  if you e.g. change dark mode theme (perhaps other state changes trigger this too)
        it recreates the App and causes a crash. This happens when koin is initialised in App() as
        we then already have an instance of Koin running.

03-04-2025
Streak: 1
    - Following Tutorial: Add additional database operations
    - Following Tutorial: Add TaskViewModel
    - Following Tutorial-ish: Fix first-launch bugs

01-04-2025
Streak: 2
    - Following Tutorial: Finish designing TaskScreen
    - Following Tutorial: Add TaskAction sealed class

31-03-2025
Streak: 1
    - Following Tutorial: Design TaskScreen (WIP)
    - Add common-language extension functions for tristate (/nullable) Booleans. (The following overengineering was brought to you by a dream I had. Sad, I know.)

25-03-2025
Streak: 3
    - Following Tutorial-ish: Put mongoDB module in DependencyInjection.kt

24-03-2025
Streak: 2
    - Pull initKoin out of androidMain and into shared App code.
    - Add task to restructure 'repository' usage.

23-03-2025
Streak: 1