@@ -28,95 +28,92 @@ import libs.mvvm.getViewModel
 const val DEFAULT_TITLE = "Enter the Title"
 const val DEFAULT_DESCRIPTION = "Add some description"
 
-data class TaskScreen(val task: ToDoTask? = null) {
-    @Composable
-    fun show(navigateBack: () -> Unit){
-        val viewModel = getViewModel<TaskViewModel>()
-        var currentTitle by remember{
-            mutableStateOf(task?.title ?: DEFAULT_TITLE)
-        }
-        var currentDescription by remember{
-            mutableStateOf(task?.description ?: DEFAULT_DESCRIPTION)
-        }
+@Composable
+fun TaskScreen(task: ToDoTask? = null, navigateBack: () -> Unit){
+    val viewModel = getViewModel<TaskViewModel>()
+    var currentTitle by remember{
+        mutableStateOf(task?.title ?: DEFAULT_TITLE)
+    }
+    var currentDescription by remember{
+        mutableStateOf(task?.description ?: DEFAULT_DESCRIPTION)
+    }
 
-        Scaffold(
-            topBar = {
-                TopAppBar (
-                    title = {
-                        BasicTextField(
-                            textStyle = TextStyle(
-                                color = MaterialTheme.colorScheme.onSurface,
-                                fontSize = MaterialTheme.typography.titleLarge.fontSize
-                            ),
-                            singleLine = true,
-                            value = currentTitle,
-                            onValueChange = { currentTitle = it}
-                        )
-                    },
-                    navigationIcon = {
-                        IconButton(
-                            onClick = { navigateBack() }
-                        ){
-                            Icon(
-                                imageVector = Icons.AutoMirrored.Default.ArrowBack,
-                                contentDescription = "Back Arrow"
-                            )
-                        }
-                    }
-                )
-            },
-            floatingActionButton = {
-                if (currentTitle.isNotEmpty() && currentDescription.isNotEmpty()){
-                    FloatingActionButton(
-                        onClick = {
-                            if (task != null) {
-                                viewModel.setAction(
-                                    action = TaskAction.Update(
-                                        ToDoTask().apply {
-                                            _id = task._id
-                                            title = currentTitle
-                                            description = currentDescription
-                                        }
-                                    )
-                                )
-                            } else {
-                                viewModel.setAction(
-                                    action = TaskAction.Add(
-                                        ToDoTask().apply {
-                                            title = currentTitle
-                                            description = currentDescription
-                                        }
-                                    )
-                                )
-                            }
-                            navigateBack()
-                        },
-                        shape = RoundedCornerShape(size = 12.dp)
+    Scaffold(
+        topBar = {
+            TopAppBar (
+                title = {
+                    BasicTextField(
+                        textStyle = TextStyle(
+                            color = MaterialTheme.colorScheme.onSurface,
+                            fontSize = MaterialTheme.typography.titleLarge.fontSize
+                        ),
+                        singleLine = true,
+                        value = currentTitle,
+                        onValueChange = { currentTitle = it}
+                    )
+                },
+                navigationIcon = {
+                    IconButton(
+                        onClick = { navigateBack() }
                     ){
                         Icon(
-                            imageVector = Icons.Default.Check,
-                            contentDescription = "Checkmark Icon"
+                            imageVector = Icons.AutoMirrored.Default.ArrowBack,
+                            contentDescription = "Back Arrow"
                         )
                     }
                 }
-            }
-        ) { padding ->
-            BasicTextField(
-                modifier = Modifier
-                    .fillMaxSize()
-                    .padding(all = 24.dp)
-                    .padding(
-                        top = padding.calculateTopPadding(),
-                        bottom = padding.calculateBottomPadding()
-                    ),
-                textStyle = TextStyle(
-                    fontSize = MaterialTheme.typography.titleMedium.fontSize,
-                    color = MaterialTheme.colorScheme.onSurface
-                ),
-                value = currentDescription,
-                onValueChange = { description -> currentDescription = description}
             )
-
+        },
+        floatingActionButton = {
+            if (currentTitle.isNotEmpty() && currentDescription.isNotEmpty()){
+                FloatingActionButton(
+                    onClick = {
+                        if (task != null) {
+                            viewModel.setAction(
+                                action = TaskAction.Update(
+                                    ToDoTask().apply {
+                                        _id = task._id
+                                        title = currentTitle
+                                        description = currentDescription
+                                    }
+                                )
+                            )
+                        } else {
+                            viewModel.setAction(
+                                action = TaskAction.Add(
+                                    ToDoTask().apply {
+                                        title = currentTitle
+                                        description = currentDescription
+                                    }
+                                )
+                            )
+                        }
+                        navigateBack()
+                    },
+                    shape = RoundedCornerShape(size = 12.dp)
+                ){
+                    Icon(
+                        imageVector = Icons.Default.Check,
+                        contentDescription = "Checkmark Icon"
+                    )
+                }
+            }
         }
+    ) { padding ->
+        BasicTextField(
+            modifier = Modifier
+                .fillMaxSize()
+                .padding(all = 24.dp)
+                .padding(
+                    top = padding.calculateTopPadding(),
+                    bottom = padding.calculateBottomPadding()
+                ),
+            textStyle = TextStyle(
+                fontSize = MaterialTheme.typography.titleMedium.fontSize,
+                color = MaterialTheme.colorScheme.onSurface
+            ),
+            value = currentDescription,
+            onValueChange = { description -> currentDescription = description}
+        )
     }
 }
