@@ -2,6 +2,10 @@ This is just to motivate myself to improve a little bit every day :)
 
 Best: 32
 
+12-08-2025
+Streak: 1
+    - Commit unfinished work, in process of converting screen classes to functions.
+
 29-04-2025
 Streak: 1
     - Apply intermediate step in removing Voyager Navigation
